@@ -1,5 +1,13 @@
 2005-10-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/rest.cc (y_offset_callback): use offset callback
+	iso. after-line-breaking callback.
+
+	* lily/grob.cc: change after/before-line-breaking-callback to
+	after/before-line-breaking dummy properties.
+
+	* lily/include/grob.hh: remove Grob_status.
+
 	* scm/define-context-properties.scm
 	(all-user-translation-properties): remove verticalAlignmentChildCallback
 
